@@ -95,6 +95,10 @@ xymon (4.4.0-alpha1) unstable; urgency=low
      TODO: These options should be factored out into stdopt.c
    * xymoncmd now supports a --no-env argument to inhibit the normal search 
      for a default environment file
+   * xymonnet: openldap seems to handle failure cases better, and we weren't handling
+     ports for the regular TCP check before an advanced LDAP URL check properly,
+     so the pre-check intended to prevent long LDAP timeouts in the event of a 
+     down server have been removed 
 
    * FIXME-doc: Add --no-cookies and --no-save-cookies (read but don't 
      write) to xymonnet
