@@ -94,6 +94,10 @@ Changes from 4.3.x -> 4.4-alpha
   TODO: These options should be factored out into stdopt.c
 * xymoncmd now supports a --no-env argument to inhibit the normal search
   for a default environment file
+* xymonnet: openldap seems to handle failure cases better, and we weren't handling
+  ports for the regular TCP check before an advanced LDAP URL check properly,
+  so the pre-check intended to prevent long LDAP timeouts in the event of a 
+  down server have been removed
 
 * FIXME-doc: Add --no-cookies and --no-save-cookies (read but don't 
   write) to xymonnet
